# ice-rs

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Demo.ice  README.md
.github/workflows/: CI.yml
Ice/: Cargo.toml
Ice/src/: communicator.rs  encoding.rs  errors.rs  iceobject.rs  lib.rs  protocol.rs  proxy.rs  serialization.rs  tcp.rs  transport.rs
Ice/src/slice/: enumeration.rs  exception.rs  function.rs  ice.pest  interface.rs  mod.rs  module.rs  parser.rs  struct_decl.rs  types.rs  writer.rs
demo_rs/: Cargo.toml  Ice.toml  build.rs
demo_rs/src/: main.rs
demos/ice/context/: Cargo.toml  build.rs  config.client
demos/ice/context/src/client/: bin.rs
demos/ice/minimal/: Cargo.toml  build.rs
demos/ice/minimal/src/: client.rs  server.rs
demos/ice/minimal/src/client/: bin.rs
demos/ice/minimal/src/server/: bin.rs
demos/ice/optional/: Cargo.toml  build.rs
demos/ice/optional/src/: client.rs  server.rs
demos/ice/optional/src/client/: bin.rs
demos/icegrid/simple/: Cargo.toml  config.client
demos/icegrid/simple/src/client/: bin.rs
demos/locator/simple/src/client/: bin.rs
demos/minimal/: Cargo.toml  build.rs
demos/minimal/src/client/: bin.rs
demos/optional/: Cargo.toml  build.rs
demos/optional/src/client/: bin.rs
derive/: Cargo.toml  README.md
derive/src/: lib.rs
example/rust/: Cargo.toml  Ice.toml  build.rs
example/rust/src/client/: bin.rs
example/slice/: Demo2.ice
minimal_rs/: Cargo.toml
minimal_rs/src/: deserialize.rs  errors.rs  main.rs  protocol.rs  serialize.rs  tcp.rs
minimal_rs/src/manual_gen/: mod.rs
minimal_rs/src/manual_gen/demo/: hello.rs  mod.rs  traits.rs
minimal_rs/src/manual_gen/rust_demo/: mod.rs
python-demo/: client.py  server.py
slice/: Exceptions.ice
slice2rs/: Cargo.toml
slice2rs/src/: main.rs
src/: adapter.rs  communicator.rs  encoding.rs  errors.rs  iceconfig.pest  iceobject.rs  initdata.rs  lib.rs  locator.rs  properties.rs  protocol.rs  proxy.rs  proxy_factory.rs  proxy_parser.rs  proxystring.pest  ssl.rs  ssltools.rs  tcp.rs  transport.rs
src/slice/: class.rs  enumeration.rs  escape.rs  exception.rs  function.rs  function_argument.rs  function_return.rs  function_throws.rs  ice.pest  interface.rs  mod.rs  module.rs  parser.rs  struct_member.rs  structure.rs  types.rs  writer.rs
src/slice2rs/: bin.rs
