[package]
name = "ice-rs"
version = "0.1.3"
authors = ["cemoktra <b.schubert82@gmail.com>"]
edition = "2018"
description = "ZeroC Ice for Rust"
readme = "README.md"
homepage = "https://github.com/cemoktra/ice-rs"
license = "GPL-2.0"
keywords = ["zeroc", "ice"]

[lib]
name = "ice_rs"
path = "src/lib.rs"

[[bin]]
name = "slice2rs"
path = "src/slice2rs/bin.rs"

[dependencies]
regex = "1"
Inflector = "0.11"
pest = "2.0"
pest_derive = "2.0"
clap = "3.0.0-beta.2"
num_enum = "0.5"