[package]
name = "ice-rs"
version = "0.2.0"
authors = ["cemoktra <b.schubert82@gmail.com>"]
edition = "2018"
description = "ZeroC Ice for Rust"
readme = "README.md"
homepage = "https://github.com/cemoktra/ice-rs"
license = "GPL-2.0"
keywords = ["zeroc", "ice", "rpc"]

[lib]
name = "ice_rs"
path = "src/lib.rs"

[[bin]]
name = "slice2rs"
path = "src/slice2rs/bin.rs"

[dependencies]
regex = "1"
Inflector = "0.11"
pest = "2.0"
pest_derive = "2.0"
clap = "3.0.0-beta.2"
num_enum = "0.5"
openssl = "0.10"
quote = "1.0"
tokio = { version = "1.1.0", features = ["full"] }
tokio-openssl = "0.6"
async-trait = "0.1"
futures = "0.3"
lazy_static = "1.4.0"