[package]
name = "rust-example"
version = "0.1.1"
authors = ["cemoktra <b.schubert82@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "demo_client"
path = "src/client/bin.rs"

[build-dependencies]
ice-rs = { path = "../../" }
config = "0.10"

[dependencies]
ice-rs = { path = "../../" }
num_enum = "0.5"