[package]
name = "minimal"
version = "0.1.0"
authors = ["cemoktra <b.schubert82@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "minimal_client"
path = "src/client/bin.rs"

[build-dependencies]
ice-rs = { path = "../../../" }

[dependencies]
ice-rs = { path = "../../../" }
