[package]
name = "optional"
version = "0.1.0"
authors = ["cemoktra <b.schubert82@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "optional_client"
path = "src/client/bin.rs"

[build-dependencies]
ice-rs = { path = "../../../" }

[dependencies]
ice-rs = { path = "../../../" }
num_enum = "0.5"
tokio = { version = "1.1.0", features = ["full"] }
async-trait = "0.1"